parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    COMILLA
    COMMENT
    DO
    ELSEIF
    EQUALNUMBER
    PLUSPLUS
    PRODUCTO
    RETURN
    SEMICOLON
    VAR

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> statementList
Rule 3     elements -> expression
Rule 4     elements -> expression COMMA elements
Rule 5     statement -> PRINT LPAREN STRING RPAREN
Rule 6     statement -> PRINT LPAREN expression RPAREN
Rule 7     statement -> PRINT LPAREN expression COMMA STRING COMMA expression RPAREN
Rule 8     statement -> ID DOT APPEND LPAREN expression RPAREN
Rule 9     statement -> ID EQUALS expression
Rule 10    statement -> IF condition LBRACE statementList RBRACE statementIF
Rule 11    statement -> WHILE condition LBRACE statementList RBRACE
Rule 12    statement -> FOR ID IN ID LBRACE statementList RBRACE
Rule 13    statement -> empty
Rule 14    statementIF -> ELSE LBRACE statementList RBRACE
Rule 15    statementIF -> ELSE IF condition LBRACE statementList RBRACE statementIF
Rule 16    statementIF -> empty
Rule 17    statementList -> statement
Rule 18    statementList -> statement statementList
Rule 19    condition -> expression relation expression
Rule 20    condition -> expression relation expression relation expression relation expression
Rule 21    relation -> AND
Rule 22    relation -> EQUALV
Rule 23    relation -> NOTEQUALV
Rule 24    relation -> LT
Rule 25    relation -> GT
Rule 26    relation -> LTE
Rule 27    relation -> GTE
Rule 28    relation -> NOT IN
Rule 29    expression -> term
Rule 30    factor -> ID DOT ISALPHA LPAREN RPAREN
Rule 31    expression -> addingOperator term
Rule 32    expression -> expression addingOperator term
Rule 33    addingOperator -> PLUS
Rule 34    addingOperator -> MINUS
Rule 35    term -> factor
Rule 36    term -> term multiplyingOperator factor
Rule 37    multiplyingOperator -> TIMES
Rule 38    multiplyingOperator -> DIVIDE
Rule 39    factor -> ID
Rule 40    factor -> STRING
Rule 41    factor -> LBRACKET elements RBRACKET
Rule 42    factor -> LBRACKET RBRACKET
Rule 43    factor -> INPUT LPAREN STRING RPAREN
Rule 44    factor -> NUMBER
Rule 45    factor -> FALSE
Rule 46    factor -> TRUE
Rule 47    factor -> LPAREN expression RPAREN
Rule 48    empty -> <empty>

Terminals, with rules where they appear

AND                  : 21
APPEND               : 8
BREAK                : 
COMILLA              : 
COMMA                : 4 7 7
COMMENT              : 
DIVIDE               : 38
DO                   : 
DOT                  : 8 30
ELSE                 : 14 15
ELSEIF               : 
EQUALNUMBER          : 
EQUALS               : 9
EQUALV               : 22
FALSE                : 45
FOR                  : 12
GT                   : 25
GTE                  : 27
ID                   : 8 9 12 12 30 39
IF                   : 10 15
IN                   : 12 28
INPUT                : 43
ISALPHA              : 30
LBRACE               : 10 11 12 14 15
LBRACKET             : 41 42
LPAREN               : 5 6 7 8 30 43 47
LT                   : 24
LTE                  : 26
MINUS                : 34
NOT                  : 28
NOTEQUALV            : 23
NUMBER               : 44
PLUS                 : 33
PLUSPLUS             : 
PRINT                : 5 6 7
PRODUCTO             : 
RBRACE               : 10 11 12 14 15
RBRACKET             : 41 42
RETURN               : 
RPAREN               : 5 6 7 8 30 43 47
SEMICOLON            : 
STRING               : 5 7 40 43
TIMES                : 37
TRUE                 : 46
VAR                  : 
WHILE                : 11
error                : 

Nonterminals, with rules where they appear

addingOperator       : 31 32
block                : 1
condition            : 10 11 15
elements             : 4 41
empty                : 13 16
expression           : 3 4 6 7 7 8 9 19 19 20 20 20 20 32 47
factor               : 35 36
multiplyingOperator  : 36
program              : 0
relation             : 19 20 20 20
statement            : 17 18
statementIF          : 10 15
statementList        : 2 10 11 12 14 15 18
term                 : 29 31 32 36

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . statementList
    (17) statementList -> . statement
    (18) statementList -> . statement statementList
    (5) statement -> . PRINT LPAREN STRING RPAREN
    (6) statement -> . PRINT LPAREN expression RPAREN
    (7) statement -> . PRINT LPAREN expression COMMA STRING COMMA expression RPAREN
    (8) statement -> . ID DOT APPEND LPAREN expression RPAREN
    (9) statement -> . ID EQUALS expression
    (10) statement -> . IF condition LBRACE statementList RBRACE statementIF
    (11) statement -> . WHILE condition LBRACE statementList RBRACE
    (12) statement -> . FOR ID IN ID LBRACE statementList RBRACE
    (13) statement -> . empty
    (48) empty -> .

  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    PRINT           shift and go to state 5
    ID              shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9
    $end            reduce using rule 48 (empty -> .)

  ! PRINT           [ reduce using rule 48 (empty -> .) ]
  ! ID              [ reduce using rule 48 (empty -> .) ]
  ! IF              [ reduce using rule 48 (empty -> .) ]
  ! WHILE           [ reduce using rule 48 (empty -> .) ]
  ! FOR             [ reduce using rule 48 (empty -> .) ]

    program                        shift and go to state 1
    block                          shift and go to state 2
    statementList                  shift and go to state 3
    statement                      shift and go to state 4
    empty                          shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> statementList .

    $end            reduce using rule 2 (block -> statementList .)


state 4

    (17) statementList -> statement .
    (18) statementList -> statement . statementList
    (17) statementList -> . statement
    (18) statementList -> . statement statementList
    (5) statement -> . PRINT LPAREN STRING RPAREN
    (6) statement -> . PRINT LPAREN expression RPAREN
    (7) statement -> . PRINT LPAREN expression COMMA STRING COMMA expression RPAREN
    (8) statement -> . ID DOT APPEND LPAREN expression RPAREN
    (9) statement -> . ID EQUALS expression
    (10) statement -> . IF condition LBRACE statementList RBRACE statementIF
    (11) statement -> . WHILE condition LBRACE statementList RBRACE
    (12) statement -> . FOR ID IN ID LBRACE statementList RBRACE
    (13) statement -> . empty
    (48) empty -> .

  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 17 (statementList -> statement .)
  ! reduce/reduce conflict for RBRACE resolved using rule 17 (statementList -> statement .)
    $end            reduce using rule 17 (statementList -> statement .)
    RBRACE          reduce using rule 17 (statementList -> statement .)
    PRINT           shift and go to state 5
    ID              shift and go to state 6
    IF              shift and go to state 7
    WHILE           shift and go to state 8
    FOR             shift and go to state 9

  ! PRINT           [ reduce using rule 48 (empty -> .) ]
  ! ID              [ reduce using rule 48 (empty -> .) ]
  ! IF              [ reduce using rule 48 (empty -> .) ]
  ! WHILE           [ reduce using rule 48 (empty -> .) ]
  ! FOR             [ reduce using rule 48 (empty -> .) ]
  ! $end            [ reduce using rule 48 (empty -> .) ]
  ! RBRACE          [ reduce using rule 48 (empty -> .) ]

    statement                      shift and go to state 4
    statementList                  shift and go to state 11
    empty                          shift and go to state 10

state 5

    (5) statement -> PRINT . LPAREN STRING RPAREN
    (6) statement -> PRINT . LPAREN expression RPAREN
    (7) statement -> PRINT . LPAREN expression COMMA STRING COMMA expression RPAREN

    LPAREN          shift and go to state 12


state 6

    (8) statement -> ID . DOT APPEND LPAREN expression RPAREN
    (9) statement -> ID . EQUALS expression

    DOT             shift and go to state 13
    EQUALS          shift and go to state 14


state 7

    (10) statement -> IF . condition LBRACE statementList RBRACE statementIF
    (19) condition -> . expression relation expression
    (20) condition -> . expression relation expression relation expression relation expression
    (29) expression -> . term
    (31) expression -> . addingOperator term
    (32) expression -> . expression addingOperator term
    (35) term -> . factor
    (36) term -> . term multiplyingOperator factor
    (33) addingOperator -> . PLUS
    (34) addingOperator -> . MINUS
    (30) factor -> . ID DOT ISALPHA LPAREN RPAREN
    (39) factor -> . ID
    (40) factor -> . STRING
    (41) factor -> . LBRACKET elements RBRACKET
    (42) factor -> . LBRACKET RBRACKET
    (43) factor -> . INPUT LPAREN STRING RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . FALSE
    (46) factor -> . TRUE
    (47) factor -> . LPAREN expression RPAREN

    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    ID              shift and go to state 22
    STRING          shift and go to state 24
    LBRACKET        shift and go to state 25
    INPUT           shift and go to state 26
    NUMBER          shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29
    LPAREN          shift and go to state 23

    condition                      shift and go to state 15
    expression                     shift and go to state 16
    term                           shift and go to state 17
    addingOperator                 shift and go to state 18
    factor                         shift and go to state 19

state 8

    (11) statement -> WHILE . condition LBRACE statementList RBRACE
    (19) condition -> . expression relation expression
    (20) condition -> . expression relation expression relation expression relation expression
    (29) expression -> . term
    (31) expression -> . addingOperator term
    (32) expression -> . expression addingOperator term
    (35) term -> . factor
    (36) term -> . term multiplyingOperator factor
    (33) addingOperator -> . PLUS
    (34) addingOperator -> . MINUS
    (30) factor -> . ID DOT ISALPHA LPAREN RPAREN
    (39) factor -> . ID
    (40) factor -> . STRING
    (41) factor -> . LBRACKET elements RBRACKET
    (42) factor -> . LBRACKET RBRACKET
    (43) factor -> . INPUT LPAREN STRING RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . FALSE
    (46) factor -> . TRUE
    (47) factor -> . LPAREN expression RPAREN

    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    ID              shift and go to state 22
    STRING          shift and go to state 24
    LBRACKET        shift and go to state 25
    INPUT           shift and go to state 26
    NUMBER          shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29
    LPAREN          shift and go to state 23

    condition                      shift and go to state 30
    expression                     shift and go to state 16
    term                           shift and go to state 17
    addingOperator                 shift and go to state 18
    factor                         shift and go to state 19

state 9

    (12) statement -> FOR . ID IN ID LBRACE statementList RBRACE

    ID              shift and go to state 31


state 10

    (13) statement -> empty .

    PRINT           reduce using rule 13 (statement -> empty .)
    ID              reduce using rule 13 (statement -> empty .)
    IF              reduce using rule 13 (statement -> empty .)
    WHILE           reduce using rule 13 (statement -> empty .)
    FOR             reduce using rule 13 (statement -> empty .)
    $end            reduce using rule 13 (statement -> empty .)
    RBRACE          reduce using rule 13 (statement -> empty .)


state 11

    (18) statementList -> statement statementList .

    $end            reduce using rule 18 (statementList -> statement statementList .)
    RBRACE          reduce using rule 18 (statementList -> statement statementList .)


state 12

    (5) statement -> PRINT LPAREN . STRING RPAREN
    (6) statement -> PRINT LPAREN . expression RPAREN
    (7) statement -> PRINT LPAREN . expression COMMA STRING COMMA expression RPAREN
    (29) expression -> . term
    (31) expression -> . addingOperator term
    (32) expression -> . expression addingOperator term
    (35) term -> . factor
    (36) term -> . term multiplyingOperator factor
    (33) addingOperator -> . PLUS
    (34) addingOperator -> . MINUS
    (30) factor -> . ID DOT ISALPHA LPAREN RPAREN
    (39) factor -> . ID
    (40) factor -> . STRING
    (41) factor -> . LBRACKET elements RBRACKET
    (42) factor -> . LBRACKET RBRACKET
    (43) factor -> . INPUT LPAREN STRING RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . FALSE
    (46) factor -> . TRUE
    (47) factor -> . LPAREN expression RPAREN

    STRING          shift and go to state 32
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    ID              shift and go to state 22
    LBRACKET        shift and go to state 25
    INPUT           shift and go to state 26
    NUMBER          shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29
    LPAREN          shift and go to state 23

    expression                     shift and go to state 33
    term                           shift and go to state 17
    addingOperator                 shift and go to state 18
    factor                         shift and go to state 19

state 13

    (8) statement -> ID DOT . APPEND LPAREN expression RPAREN

    APPEND          shift and go to state 34


state 14

    (9) statement -> ID EQUALS . expression
    (29) expression -> . term
    (31) expression -> . addingOperator term
    (32) expression -> . expression addingOperator term
    (35) term -> . factor
    (36) term -> . term multiplyingOperator factor
    (33) addingOperator -> . PLUS
    (34) addingOperator -> . MINUS
    (30) factor -> . ID DOT ISALPHA LPAREN RPAREN
    (39) factor -> . ID
    (40) factor -> . STRING
    (41) factor -> . LBRACKET elements RBRACKET
    (42) factor -> . LBRACKET RBRACKET
    (43) factor -> . INPUT LPAREN STRING RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . FALSE
    (46) factor -> . TRUE
    (47) factor -> . LPAREN expression RPAREN

    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    ID              shift and go to state 22
    STRING          shift and go to state 24
    LBRACKET        shift and go to state 25
    INPUT           shift and go to state 26
    NUMBER          shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29
    LPAREN          shift and go to state 23

    expression                     shift and go to state 35
    term                           shift and go to state 17
    addingOperator                 shift and go to state 18
    factor                         shift and go to state 19

state 15

    (10) statement -> IF condition . LBRACE statementList RBRACE statementIF

    LBRACE          shift and go to state 36


state 16

    (19) condition -> expression . relation expression
    (20) condition -> expression . relation expression relation expression relation expression
    (32) expression -> expression . addingOperator term
    (21) relation -> . AND
    (22) relation -> . EQUALV
    (23) relation -> . NOTEQUALV
    (24) relation -> . LT
    (25) relation -> . GT
    (26) relation -> . LTE
    (27) relation -> . GTE
    (28) relation -> . NOT IN
    (33) addingOperator -> . PLUS
    (34) addingOperator -> . MINUS

    AND             shift and go to state 39
    EQUALV          shift and go to state 40
    NOTEQUALV       shift and go to state 41
    LT              shift and go to state 42
    GT              shift and go to state 43
    LTE             shift and go to state 44
    GTE             shift and go to state 45
    NOT             shift and go to state 46
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21

    relation                       shift and go to state 37
    addingOperator                 shift and go to state 38

state 17

    (29) expression -> term .
    (36) term -> term . multiplyingOperator factor
    (37) multiplyingOperator -> . TIMES
    (38) multiplyingOperator -> . DIVIDE

    AND             reduce using rule 29 (expression -> term .)
    EQUALV          reduce using rule 29 (expression -> term .)
    NOTEQUALV       reduce using rule 29 (expression -> term .)
    LT              reduce using rule 29 (expression -> term .)
    GT              reduce using rule 29 (expression -> term .)
    LTE             reduce using rule 29 (expression -> term .)
    GTE             reduce using rule 29 (expression -> term .)
    NOT             reduce using rule 29 (expression -> term .)
    PLUS            reduce using rule 29 (expression -> term .)
    MINUS           reduce using rule 29 (expression -> term .)
    RPAREN          reduce using rule 29 (expression -> term .)
    COMMA           reduce using rule 29 (expression -> term .)
    PRINT           reduce using rule 29 (expression -> term .)
    ID              reduce using rule 29 (expression -> term .)
    IF              reduce using rule 29 (expression -> term .)
    WHILE           reduce using rule 29 (expression -> term .)
    FOR             reduce using rule 29 (expression -> term .)
    $end            reduce using rule 29 (expression -> term .)
    RBRACE          reduce using rule 29 (expression -> term .)
    RBRACKET        reduce using rule 29 (expression -> term .)
    LBRACE          reduce using rule 29 (expression -> term .)
    TIMES           shift and go to state 48
    DIVIDE          shift and go to state 49

    multiplyingOperator            shift and go to state 47

state 18

    (31) expression -> addingOperator . term
    (35) term -> . factor
    (36) term -> . term multiplyingOperator factor
    (30) factor -> . ID DOT ISALPHA LPAREN RPAREN
    (39) factor -> . ID
    (40) factor -> . STRING
    (41) factor -> . LBRACKET elements RBRACKET
    (42) factor -> . LBRACKET RBRACKET
    (43) factor -> . INPUT LPAREN STRING RPAREN
    (44) factor -> . NUMBER
    (45) factor -> . FALSE
    (46) factor -> . TRUE
    (47) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 22
    STRING          shift and go to state 24
    LBRACKET        shift and go to state 25
    INPUT           shift and go to state 26
    NUMBER          shift and go to state 27
    FALSE           shift and go to state 28
    TRUE            shift and go to state 29
    LPAREN          shift and go to state 23

    term                           shift and go to state 50
    factor                         shift and go to state 19

state 19

    (35) term -> factor .

    TIMES           reduce using rule 35 (term -> factor .)
    DIVIDE          reduce using rule 35 (term -> factor .)
    AND             reduce using rule 35 (term -> factor .)
    EQUALV          reduce using rule 35 (term -> factor .)
    NOTEQUALV       reduce using rule 35 (term -> factor .)
    LT              reduce using rule 35 (term -> factor .)
    GT              reduce using rule 35 (term -> factor .)
    LTE             reduce using rule 35 (term -> factor .)
    GTE             reduce using rule 35 (term -> factor .)
    NOT             reduce using rule 35 (term -> factor .)
    PLUS            reduce using rule 35 (term -> factor .)
    MINUS           reduce using rule 35 (term -> factor .)
    RPAREN          reduce using rule 35 (term -> factor .)
    COMMA           reduce using rule 35 (term -> factor .)
    PRINT           reduce using rule 35 (term -> factor .)
    ID              reduce using rule 35 (term -> factor .)
    IF              reduce using rule 35 (term -> factor .)
    WHILE           reduce using rule 35 (term -> factor .)
    FOR             reduce using rule 35 (term -> factor .)
    $end            reduce using rule 35 (term -> factor .)
    RBRACE          reduce using rule 35 (term -> factor .)
    RBRACKET        reduce using rule 35 (term -> factor .)
    LBRACE          reduce using rule 35 (term -> factor .)


state 20

    (33) addingOperator -> PLUS .

    ID              reduce using rule 33 (addingOperator -> PLUS .)
    STRING          reduce using rule 33 (addingOperator -> PLUS .)
    LBRACKET        reduce using rule 33 (addingOperator -> PLUS .)
    INPUT           reduce using rule 33 (addingOperator -> PLUS .)
    NUMBER          reduce using rule 33 (addingOperator -> PLUS .)
    FALSE           reduce using rule 33 (addingOperator -> PLUS .)
    TRUE            reduce using rule 33 (addingOperator -> PLUS .)
    LPAREN          reduce using rule 33 (addingOperator -> PLUS .)


state 21

    (34) addingOperator -> MINUS .

    ID              reduce using rule 34 (addingOperator -> MINUS .)
    STRING          reduce using rule 34 (addingOperator -> MINUS .)
    LBRACKET        reduce using rule 34 (addingOperator -> MINUS .)
    INPUT           reduce using rule 34 (addingOperator -> MINUS .)
    NUMBER          reduce using rule 34 (addingOperator -> MINUS .)
    FALSE           reduce using rule 34 (addingOperator -> MINUS .)
    TRUE            reduce using rule 34 (addingOperator -> MINUS .)
    LPAREN          reduce using rule 34 (addingOperator -> MINUS .)


state 22

    (30) factor -> ID . DOT ISALPHA LPAREN RPAREN
    (39) factor -> ID .

    DOT             shift and go to state 51
    TIMES           reduce using rule 39 (factor -> ID .)
    DIVIDE          reduce using rule 39 (factor -> ID .)
    AND             reduce using rule 39 (factor -> ID .)
    EQUALV          reduce using rule 39 (factor -> ID .)
    NOTEQUALV       reduce using rule 39 (factor -> ID .)
    LT              reduce using rule 39 (factor -> ID .)
    GT              reduce using rule 39 (factor -> ID .)
    LTE             reduce using rule 39 (factor -> ID .)
    GTE             reduce using rule 39 (factor -> ID .)
    NOT             reduce using rule 39 (factor -> ID .)
    PLUS            reduce using rule 39 (factor -> ID .)
    MINUS           reduce using rule 39 (factor -> ID .)
    RPAREN          reduce using rule 39 (factor -> ID .)
    COMMA           reduce using rule 39 (factor -> ID .)
    PRINT           reduce using rule 39 (factor -> ID .)
    ID              reduce using rule 39 (factor -> ID .)
    IF              reduce using rule 39 (factor -> ID .)
    WHILE           reduce using rule 39 (factor -> ID .)
    FOR             reduce using rule 39 (factor -> ID .)
    $end            reduce using rule 39 (factor -> ID .)
    RBRACE          reduce using rule 39 (factor -> ID .)
    RBRACKET        reduce using rule 39 (factor -> ID .)
    LBRACE          reduce using rule 39 (factor -> ID .)


state 23
